<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgr">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                app:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/header1"
                    android:textSize="25dp"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:src="@drawable/img1" />

                    <TextView
                        android:id="@+id/sport1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/img1"
                        android:text="@string/sport1"
                        android:paddingLeft="15dp"
                        android:textSize="18dp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sport2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/sport1"
                        android:layout_alignStart="@id/sport1"
                        android:text="@string/sportnews1"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:textSize="13dp"
                        android:textColor="@color/black" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/sport2"
                        android:layout_alignStart="@id/sport2"
                        android:layout_marginStart="15dp"
                        android:text="@string/add"
                        android:textAllCaps="false" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:src="@drawable/img2" />

                    <TextView
                        android:id="@+id/sport3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/img2"
                        android:text="@string/sport2"
                        android:paddingLeft="15dp"
                        android:textSize="18dp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sport4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/sport3"
                        android:layout_alignStart="@id/sport3"
                        android:text="@string/sportnews2"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:textSize="13dp"
                        android:textColor="@color/black" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/sport4"
                        android:layout_alignStart="@id/sport4"
                        android:layout_marginStart="15dp"
                        android:text="@string/add"
                        android:textAllCaps="false"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/full_list"
                    android:textSize="25dp"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/header2"
                    android:textSize="25dp"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/img3"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:src="@drawable/img3" />

                    <TextView
                        android:id="@+id/travel1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/img3"
                        android:text="@string/travel1"
                        android:paddingLeft="15dp"
                        android:textSize="18dp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/travel2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/travel1"
                        android:layout_alignStart="@id/travel1"
                        android:text="@string/travelnews1"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:textSize="13dp"
                        android:textColor="@color/black" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/travel2"
                        android:layout_alignStart="@id/travel2"
                        android:layout_marginStart="15dp"
                        android:text="@string/add"
                        android:textAllCaps="false"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/img4"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:src="@drawable/img4" />

                    <TextView
                        android:id="@+id/travel3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/img4"
                        android:text="@string/travel2"
                        android:paddingLeft="15dp"
                        android:textSize="18dp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/travel4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/travel3"
                        android:layout_alignStart="@id/travel3"
                        android:text="@string/travelnews2"
                        android:paddingLeft="15dp"
                        android:paddingTop="5dp"
                        android:textSize="13dp"
                        android:textColor="@color/black" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/travel4"
                        android:layout_alignStart="@id/travel4"
                        android:layout_marginStart="15dp"
                        android:text="@string/add"
                        android:textAllCaps="false"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/full_list"
                    android:textSize="25dp"
                    android:layout_marginLeft="15dp"
                    android:gravity="center_vertical" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>